--- a/src/styling/NavBar.css
+++ b/src/styling/NavBar.css
@@ -1,7 +1,8 @@
 .nav-bar {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+
 }
 .nav-fn p {
     font-family: Montserrat;
