--- a/src/styling/Skills.css
+++ b/src/styling/Skills.css
@@ -1,5 +1,6 @@
 .skills-section {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 equal columns */
   gap: 20px;
   flex-wrap: wrap;
 }
@@ -12,12 +13,11 @@
   border: 2px solid #ccc;
   border-radius: 10px;
   padding: 15px;
-  width: 100px;
   height: 100px;
   transition: border-color 0.3s ease;
   cursor: pointer;
-  overflow: hidden; 
-  text-align: center; 
+  overflow: hidden;
+  text-align: center;
 }
 
 .skill-card:hover {
@@ -30,13 +30,13 @@
   justify-content: center;
   align-items: center;
   width: 60px;
-  height: 60px; 
+  height: 60px;
 }
 
 .skill-card .logo-container img {
   width: 100%;
   height: 100%;
-  object-fit: contain; 
+  object-fit: contain;
   transition: opacity 0.3s ease;
 }
 
@@ -46,11 +46,17 @@
 }
 
 .skill-card:hover .logo-container img {
-  opacity: 0.7; 
+  opacity: 0.7;
 }
 
 .skill-card p {
-  margin: 0; 
-  padding-top: 10px; 
+  margin: 0;
+  padding-top: 10px;
   line-height: 1.2;
-  vertical-align: middle; 
+  vertical-align: middle;
+}
+@media (max-width: 768px) {
+  .skills-section {
+    grid-template-columns: repeat(2, 1fr); /* 2 columns on smaller screens */
+  }
+}
