--- a/src/styling/TabList.css
+++ b/src/styling/TabList.css
@@ -1,4 +1,4 @@
-/* General styling for the tab list */
+
 .tabs-list {
     margin-top: 20px;
     display: flex;
@@ -6,9 +6,10 @@
     background-color: hsl(0, 0%, 24%);
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
   }
   
-  /* Style for individual tab triggers */
+
   .tab-trigger {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -19,24 +20,43 @@
     background-color: hsl(0, 0%, 24%);
     border: none;
     color: gray;
-    border-radius: 2px;
+    border-radius: 4px;
     font-weight: bold;
     transition: background-color 0.3s ease, border-color 0.3s ease;
-    width: 40%;
+    width: 48%;
   }
   
-  /* Active tab style */
+
   .tab-trigger[data-state='active'] {
     background-color: hsl(0, 0%, 14%);
-    /* border-color: #007bff; */
     color: white;
   }
   
-  /* Styling for the tab content */
+
   .tab-content {
-    /* padding: 20px;
+    padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9; */
+ 
   }
   
+  .subtext {
+    color: rgb(151, 151, 151);
+    margin-top: 0px;
+    margin-bottom: 0
+  }
+
+
+  .job-title, .school-name {
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+  
+  .degree-name, .subtext {
+    margin-top: 0px;
+    color: rgb(109, 109, 109);
+  }
+
+  .bullet-list {
+    margin-top: 5px;
+  }
