--- a/src/styling/FeaturedProjects.css
+++ b/src/styling/FeaturedProjects.css
@@ -57,6 +57,12 @@
     color: rgb(163, 163, 163);
     font-size: 0.8rem;
   }
+
+  .featured-title > a:hover {
+
+    color: rgb(255, 255, 255);
+   
+  }
   .card-content {
     padding-left: 20px;
   }
