--- a/src/styling/TabList.css
+++ b/src/styling/TabList.css
@@ -25,6 +25,10 @@
     transition: background-color 0.3s ease, border-color 0.3s ease;
     width: 48%;
   }
+
+  .tab-trigger:hover {
+    background-color: hsl(0, 0%, 19%);
+  }
   
 
   .tab-trigger[data-state='active'] {
