added resume, finished projects page, finished styling

--- a/src/styling/Projects.css
+++ b/src/styling/Projects.css
@@ -1,3 +1,16 @@
 .projects-section {
     text-align: left;
 }
+
+.source-button {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    width: 90px;
+ 
+}
+
+.source-button:hover {
+   opacity: 40%;
+}
