--- a/src/styling/AboutMe.css
+++ b/src/styling/AboutMe.css
@@ -14,6 +14,8 @@
     font-weight: 00;
     font-size: 0.rem;
     padding: 5px;
+    text-decoration: none;
+    border: 1px solid white;
 }
 
 .resume-button span {
