--- a/src/styling/FeaturedProjects.css
+++ b/src/styling/FeaturedProjects.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
 
-    height: 420px;
+    height: 490px;
     width: 340px;
     border: 1px solid #ddd;
     border-radius: 10px;
@@ -23,7 +23,7 @@
   .featured-cards:hover {
     transform: scale(1.05);
     background-color: hsl(0, 0%, 19%);
-    cursor: pointer;
+    cursor: default;
   }
   
   .featured-image-container {
