--- a/src/styling/NavBar.css
+++ b/src/styling/NavBar.css
@@ -22,6 +22,13 @@
     color: inherit; 
   }
 
+  h4 {
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding-left: 5px;
+    font-weight: 400;
+  }
+
   
   
   .nav-tabs a:hover, .nav-tabs .nav-link:hover {
