possible changes to experience section

--- a/src/styling/TabList.css
+++ b/src/styling/TabList.css
@@ -63,9 +63,48 @@
 
   .bullet-list {
     margin-top: 5px;
+    border-left: 1px solid white;
+    list-style: none;
+    
   }
 
   .bullet-list li {
     margin: 5px;
     padding: 5px;
+  }
+
+  .description-list {
+    padding-left: 12px
+  }
+
+  .company-logo-container {
+    position: relative;
+    display: flex;
+    flex-shrink: 0;
+    overflow: hidden;
+    border-radius: 50%; 
+    width: 3rem; 
+    height: 3rem; 
+    border: 1px solid currentColor; 
+  }
+
+  .company-logo {
+    aspect-ratio: 1 / 1; 
+    height: 100%; 
+    width: 100%; 
+    background-color: var(--background); 
+    object-fit: contain; 
+  }
+
+
+  .company-link {
+    position: absolute;
+    left: 30.5rem; 
+    /* top: 1rem;    */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    /* background-color: #ffffff; */
+    text-decoration: none;  
   }
