changed color for website and portfolio preview updated

--- a/src/styling/FeaturedProjects.css
+++ b/src/styling/FeaturedProjects.css
@@ -22,7 +22,7 @@
   
   .featured-cards:hover {
     transform: scale(1.05);
-    background-color: hsl(0, 0%, 19%);
+    background-color: hsl(215, 30%, 34%);
     cursor: default;
   }
   
@@ -72,7 +72,7 @@
   
   .tag {
     display: inline-block;
-    background-color: #414141;
+    background-color: #6b6b6b;
     color: #fcfcfc;
     padding: 3px 7px;
     margin-right: 8px;
@@ -83,7 +83,7 @@
   }
   
   .tag:hover {
-    background-color: #3a3a3a;
+    background-color: hsl(215, 30%, 27%);
     color: #fff;
   }
   
